quick_tests/cases/pass/p300_func_call_with_typed_params.webx
fn main() -> i32 { let x: i32 = 5; let y: i32 = 10; println(x + y); }