quick_tests/cases/fail/f22_invalid_token_in_expression.webx
fn main() -> i32 { let x = 5; println(x = 10); }